// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AutoComplete Should render Autocomplete 1`] = `
.c3 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
}

.c3::-webkit-inner-spin-button,
.c3::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c3::-webkit-calendar-picker-indicator,
.c3::-webkit-search-cancel-button {
  display: none;
}

.c3::-ms-clear {
  display: none;
}

.c3:hover,
.c3:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c3[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c3:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c3[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c2 {
  display: block;
  font-weight: bold;
  margin: 8px 0 0;
  color: inherit;
}

.c0 {
  position: relative;
  color: #424242;
}

.c1 {
  position: relative;
}

.c4 {
  margin-top: 8px;
}

.c5 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <label
      class="c2"
      for=""
    >
      
    </label>
    <input
      aria-autocomplete="both"
      aria-expanded="false"
      aria-owns="autocompleteOptions"
      autocomplete="off"
      class="c3 c4"
      id=""
      name=""
      placeholder="Select an option"
      role="combobox"
      type="text"
      value=""
    />
    
    
  </div>
  
  
  <div
    aria-atomic="true"
    aria-live="polite"
    class="c5"
    role="status"
  >
    Digite uma ou mais letras para expandir os resultados. 5 estão disponiveis.
  </div>
</div>
`;

exports[`AutoComplete Should render Autocomplete with dark skin 1`] = `
.c3 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: rgba(0,0,0,0.7);
  border: 2px solid transparent;
  color: #ffffff;
}

.c3::-webkit-inner-spin-button,
.c3::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c3::-webkit-calendar-picker-indicator,
.c3::-webkit-search-cancel-button {
  display: none;
}

.c3::-ms-clear {
  display: none;
}

.c3::-webkit-input-placeholder {
  color: #ffffff;
}

.c3::-moz-placeholder {
  color: #ffffff;
}

.c3:-ms-input-placeholder {
  color: #ffffff;
}

.c3::placeholder {
  color: #ffffff;
}

.c3:hover,
.c3:focus {
  border-color: #0CC0EA;
}

.c3[disabled] {
  color: rgba(255,255,255,0.5);
  border-color: transparent;
}

.c3[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c2 {
  display: block;
  font-weight: bold;
  margin: 8px 0 0;
  color: inherit;
}

.c0 {
  position: relative;
  color: #ffffff;
}

.c1 {
  position: relative;
}

.c4 {
  margin-top: 8px;
}

.c5 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <label
      class="c2"
      for=""
    >
      
    </label>
    <input
      aria-autocomplete="both"
      aria-expanded="false"
      aria-owns="autocompleteOptions"
      autocomplete="off"
      class="c3 c4"
      id=""
      name=""
      placeholder="Select an option"
      role="combobox"
      type="text"
      value=""
    />
    
    
  </div>
  
  
  <div
    aria-atomic="true"
    aria-live="polite"
    class="c5"
    role="status"
  >
    Digite uma ou mais letras para expandir os resultados. 5 estão disponiveis.
  </div>
</div>
`;
